ajout des icones

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
              <!--Ajout du champs de recherche-->
              <form>
+                <i class="fas fa-map-marker-alt"></i>
                 <input type="search" placeholder="Marseille, France" name="the_search">
                 <button>Rechercher</button>
             </form>
@@ -36,10 +37,10 @@
               <div>  
                   <table>
                     <tr>
-                        <td>Economique</td>
-                        <td>Familial</td>
-                        <td>Romantique</td>
-                        <td>Animaux autorisés</td>
+                        <td><i class="fas fa-money-bill-wave"></i>Economique</td>
+                        <td><i class="fas fa-child"></i>Familial</td>
+                        <td><i class="fas fa-heart"></i>Romantique</td>
+                        <td><i class="fas fa-dog"></i>Animaux autorisés</td>
                     </tr>
                 </table>
             </div>
