--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
              <div>
                 <nav>
                     <ul>
-                        <li><a href="index.html"title="Hebergement">Hébergement</a></li>
-                        <li><a href="index.html"title="Activités">Activités</a></li>
-                        <li><a href="contact.html"title="S'inscrire"></a>S'incrire</li>
+                        <li><a href="index.html"title="Hebergement" class="nav">Hébergement</a></li>
+                        <li><a href="index.html"title="Activités" class="nav">Activités</a></li>
+                        <li><a href="contact.html"title="S'inscrire" class="inscription"></a>S'incrire</li>
                     </ul>
                 </nav>
-
-           <img src="img/Reservia.svg" alt="logo">
+            </div>
+            <!--logo-->
+           <img src="img/Reservia.svg" alt="logo" id="logo">
 
             <!--Ajout du sous-titre-->
             <h2>Trouvez votre hebergement pour des vacances de rêve</h2>          
