ajout hover sur le menu

--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
             <!--HEADER-->
 
              <!--Ajout du menu-->
-             <div>
+             <div class="menu">
                 <nav>
-                    <ul>
+                    <ul  class="nav">
                         <li><a href="index.html"title="Hebergement">Hébergement</a></li>
                         <li><a href="index.html"title="Activités">Activités</a></li>
                         <li><a href="contact.html"title="S'inscrire"></a>S'incrire</li>
                     </ul>
                 </nav>
+                </div>
 
-           <img src="img/Reservia.svg" alt="logo">
+           <img src="img/Reservia.svg" class="logo"alt="logo">
 
             <!--Ajout du sous-titre-->
             <h2>Trouvez votre hebergement pour des vacances de rêve</h2>          
