--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 
              <!--Ajout des filtres-->   
               <div >  
-                  <table>
+                  <table class="ecart">
+                      <caption>Filtres</caption>
                     <tr>
                         <td class=border-filter><i class="fas fa-money-bill-wave" id="filtercategory"></i>Economique</td>
                         <td class=border-filter><i class="fas fa-child" id="filtercategory"></i>Familial</td>
@@ -46,12 +47,13 @@
                         <td class=border-filter><i class="fas fa-dog" id="filtercategory"></i>Animaux autorisés</td>
                     </tr>
                 </table>
+             </div>
+
+             <!--information-->
+            <div class="info"><i class="fas fa-info-circle"></i>
+
+                 <p>Plus de 500 logements sont disponibles dans cette ville</p>
             </div>
-
-                <!--information-->
-
-                <p>Plus de 500 logements sont disponibles dans cette ville</p>
-
                
            
             </header>
