--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
              <!--Ajout du champs de recherche-->
              <form class="search">
-                <i class="fas fa-map-marker-alt iconsearch" id="map-marker"></i>
+                <i class="fas fa-map-marker-alt"></i>
                 <input type="search" placeholder="Marseille, France" name="the_search" class="searchbar">
                 <button class="button">Rechercher</button>
             </form>
