--- a/index.html
+++ b/index.html
@@ -171,7 +171,8 @@
                <span><i class="fas fa-chart-line"></i></span>
             </div>
                <article class="location-pop">
-                   <img src="img/Populaires/Photo 1.jpg" alt="Hôtel Le soleil du matin">
+                   <img class="img-pop"src="img/Populaires/Photo 1.jpg" alt="Hôtel Le soleil du matin">
+                   <div class="text-pop">
                    <h3>Hôtel Le soleil du matin</h3>
                    <p>Nuit à partir de <strong>128€</strong></p>
                    <div>
@@ -181,9 +182,11 @@
                        <span><i class="fas fa-star blue"></i></span>
                        <span><i class="fas fa-star blue"></i></span>
                    </div>
+                </div>
                </article>
                <article class="location-pop">
-                   <img src="img/Populaires/photo 2.jpg" alt="Au coeur de l'eau Chambres d'hôtes">
+                   <img class="img-pop"src="img/Populaires/photo 2.jpg" alt="Au coeur de l'eau Chambres d'hôtes">
+                   <div class="text-pop">
                    <h3>Au coeur de l'eau Chambres d'hôtes</h3>
                    <p>Nuit à partir de <strong>71€</strong></p>
                    <div>
@@ -193,9 +196,11 @@
                        <span><i class="fas fa-star blue"></i></span>
                        <span><i class="fas fa-star grey"></i></span>
                    </div>
+                   </div>
                </article>
                <article class="location-pop">
-                   <img src="img/Populaires/photo 3.jpg" alt="Hôtel Tout bleu et Blanc">
+                   <img class="img-pop"src="img/Populaires/photo 3.jpg" alt="Hôtel Tout bleu et Blanc">
+                   <div class="text-pop">
                    <h3>Hôtel Tout bleu et Blanc</h3>
                    <p>Nuit à partir de <strong>68€</strong></p>
                    <div>
@@ -204,6 +209,7 @@
                        <span><i class="fas fa-star blue"></i></span>
                        <span><i class="fas fa-star blue"></i></span>
                        <span><i class="fas fa-star grey"></i></span>
+                   </div>
                    </div>
                </article> 
            </div> 
