--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                <section>
                    <!--ajout d'hebergement-->
            <div  class="hebergements">
-                <h2 id="hebergements">Hébergement à Marseille</h2>
+                <h2 id="hebergements">Hébergements à Marseille</h2>
                <!--ligne 1-->
                <div class="ligne1">    
                    <article class="location">  
