--- a/index.html
+++ b/index.html
@@ -58,9 +58,11 @@
                 <!--Ajout des catégories-->
                <section>
                    <!--ajout d'hebergement-->
+              <div class="bloc1"> 
            <div  class="hebergements">
                 <h2 id="hebergements">Hébergements à Marseille</h2>
                <!--ligne 1-->
+               
                <div class="ligne1">    
                    <article class="location">  
                     <img src="img/Hébergements/photo 1.jpg" alt="Auberge la Cannebière">
@@ -161,7 +163,7 @@
                    <p class="plus">Afficher plus</p>
                 </div>
             </div>
-            </div> 
+        
 
           <div class="populaires">
                <!--Ajout les plus populaires-->
@@ -212,6 +214,8 @@
                    </div>
                </article> 
            </div> 
+        </div>
+    </div>   
         </section>
               </main>
 
