Ajout activités &  footer

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
           <nav class="header-nav">
             <a href="#hebergements" title="Hebergement">Hébergement</a>
-            <a href="index.html" title="Activités">Activités</a>
+            <a href="#activites" title="Activités">Activités</a>
             <a
               href="#"
               title="inscription"
@@ -55,18 +55,25 @@
         <div class="filtres">
           <h3 class="filters">Filtres</h3>
           <div class="categories">
-            <section class="border-filter">
-              <i class="fas fa-money-bill-wave" id="filtercategory"></i
-              >Economique
+            <section>
+              <div class="border-filter">
+              <i class="fas fa-money-bill-wave filtercategory"></i>Economique
+            </div>
             </section>
-            <section class="border-filter">
-              <i class="fas fa-child" id="filtercategory"></i>Familial
+            <section>
+              <div class="border-filter">
+              <i class="fas fa-child filtercategory"></i>Familial
+            </div>
             </section>
-            <section class="border-filter">
-              <i class="fas fa-heart" id="filtercategory"></i>Romantique
+            <section>
+              <div class="border-filter">
+              <i class="fas fa-heart filtercategory"></i>Romantique
+            </div>
             </section>
-            <section class="border-filter">
-              <i class="fas fa-dog" id="filtercategory"></i>Animaux autorisés
+            <section>
+              <div class="border-filter">
+              <i class="fas fa-dog filtercategory"></i>Animaux autorisés
+            </div>
             </section>
           </div>
         </div>
@@ -83,15 +90,11 @@
       <section>
         <!--ajout d'hebergement-->
         <div class="hebergements">
-          <h2 id="hebergements">Hébergements à Marseille</h2>
-          <!--ligne 1-->
+          <h2 id="hebergements">Hébergements à Marseille</h2> 
 
           <div class="container">
             <article class="location">
-              <img
-                src="img/Hébergements/photo 1.jpg"
-                alt="Auberge la Cannebière"
-              />
+              <img src="img/Hébergements/photo1.jpg" alt="Auberge la Cannebière"/>
               <div class="text">
                 <h3>Auberge de la Cannebière</h3>
                 <p>Nuit à partir de <strong>25€</strong></p>
@@ -107,7 +110,7 @@
             </article>
 
             <article class="location">
-              <img src="img/Hébergements/photo 2.jpg" alt="Hôtel du port" />
+              <img src="img/Hébergements/photo2.jpg" alt="Hôtel du port"/>
               <div class="text">
                 <h3>Hôtel du port</h3>
                 <p>Nuit à partir de <strong>52€</strong></p>
@@ -122,10 +125,7 @@
             </article>
 
             <article class="location">
-              <img
-                src="img/Hébergements/photo 3.jpg"
-                alt="Hôtel Les mouettes"
-              />
+              <img src="img/Hébergements/photo3.jpg" alt="Hôtel Les mouettes"/>
               <div class="text">
                 <h3>Hôtel Les mouettes</h3>
                 <p>Nuit à partir de <strong>76€</strong></p>
@@ -140,7 +140,7 @@
             </article>
 
             <article class="location">
-              <img src="img/Hébergements/photo 4.jpg" alt="Hôtel de la mer" />
+              <img src="img/Hébergements/photo4.jpg" alt="Hôtel de la mer"/>
               <div class="text">
                 <h3>Hôtel de la mer</h3>
                 <p>Nuit à partir de <strong>46€</strong></p>
@@ -155,7 +155,7 @@
             </article>
 
             <article class="location">
-              <img src="img/Hébergements/photo 5.jpg" alt="Auberge Le Panier" />
+              <img src="img/Hébergements/photo5.jpg" alt="Auberge Le Panier"/>
               <div class="text">
                 <h3>Auberge Le Panier</h3>
                 <p>Nuit à partir de <strong>23€</strong></p>
@@ -170,7 +170,7 @@
             </article>
 
             <article class="location">
-              <img src="img/Hébergements/photo 6.jpg" alt="Hôtel chez Amina" />
+              <img src="img/Hébergements/photo6.jpg" alt="Hôtel chez Amina"/>
               <div class="text">
                 <h3>Hôtel chez Amina</h3>
                 <p>Nuit à partir de <strong>96€</strong></p>
@@ -197,12 +197,9 @@
             <h2>Les plus populaires</h2>
             <span><i class="fas fa-chart-line"></i></span>
           </div>
+          <div class="container-2">
           <article class="location-pop">
-            <img
-              class="img-pop"
-              src="img/Populaires/Photo 1.jpg"
-              alt="Hôtel Le soleil du matin"
-            />
+            <img class="img-pop" src="img/Populaires/Photo1.jpg" alt="Hôtel Le soleil du matin"/>
             <div class="text-pop">
               <h3>Hôtel Le soleil du matin</h3>
               <p>Nuit à partir de <strong>128€</strong></p>
@@ -216,11 +213,7 @@
             </div>
           </article>
           <article class="location-pop">
-            <img
-              class="img-pop"
-              src="img/Populaires/photo 2.jpg"
-              alt="Au coeur de l'eau Chambres d'hôtes"
-            />
+            <img class="img-pop" src="img/Populaires/photo2.jpg" alt="Au coeur de l'eau Chambres d'hôtes"/>
             <div class="text-pop">
               <h3>Au coeur de l'eau Chambres d'hôtes</h3>
               <p>Nuit à partir de <strong>71€</strong></p>
@@ -234,11 +227,7 @@
             </div>
           </article>
           <article class="location-pop">
-            <img
-              class="img-pop"
-              src="img/Populaires/photo 3.jpg"
-              alt="Hôtel Tout bleu et Blanc"
-            />
+            <img class="img-pop" src="img/Populaires/photo3.jpg" alt="Hôtel Tout bleu et Blanc"/>
             <div class="text-pop">
               <h3>Hôtel Tout bleu et Blanc</h3>
               <p>Nuit à partir de <strong>68€</strong></p>
@@ -252,76 +241,86 @@
             </div>
           </article>
         </div>
+        </div>
+
       </section>
       <!--ajout d'activités-->
       <!--Vieux Port-->
       <section class="bloc-activites">
         <div class="titre-activites">
-          <h2>Activités à Marseille</h2>
+          <h2 id="activites">Activités à Marseille</h2>
         </div>
         <div class="annonces-activites">
           <div class="grandformat">
-            <img
-              src="img/Activités/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
-              alt="Vieux Port"
-              class="bloc-visite"
-            />
+            <img src="img/Activités/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port"/>
             <div class="titre-photo">
               <p>Vieux-Port</p>
             </div>
           </div>
           <!--Fort de Pomègues et Iles du Frioul-->
+          <div class="container-activites">
             <div class="petitformat">
-              <img
-                src="img/Activités/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
-                alt="Fort de Pomègues"
-                class="bloc-visite"
-              />
+              <img src="img/Activités/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues"/>
               <div class="titre-photo">
                 <p>Fort de Pomègues</p>
               </div>
-            <img
-              src="img/Activités/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
-              alt="Iles du Frioul"
-              class="bloc-visite"
-            />
+            </div>
+              <div class="petitformat">
+            <img src="img/Activités/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Iles du Frioul"/>
             <div class="titre-photo">
                 <p>Iles du Frioul
                 </p>
             </div>
         </div>
+      </div>
         <div class="grandformat">
-          <img
-            src="img/Activités/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
-            alt="Parc National des Calanques"
-            class="bloc-visite"
-          />
+          <img src="img/Activités/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc National des Calanques"/>
           <div class="titre-photo">
               <p>Parc National des Calanques</p>
 
           </div>
         </div>
+        <div class="container-activites">
         <div class="petitformat">
-          <img
-            src="img/Activités/florian-wehde-xW9e8gdotxI-unsplash.jpg"
-            alt="Notre-Dame-de-la-Garde"
-            class="bloc-visite"
-          />
+          <img src="img/Activités/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde"/>
           <div class="titre-photo">
               <p>Notre-Dame-de-la-Garde</p>
           </div>
-          <img
-            src="img/Activités/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
-            alt="Parc Longchamp"
-            class="bloc-visite"
-          />
+        </div>
+        <div class="petitformat">
+          <img src="img/Activités/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc Longchamp"/>
           <div class="titre-photo">
               <p>Parc Longchamp</p>
-
           </div>
         </div>
-        </div>
+      </div>
       </section>
+      <footer>
+        <div class="footer">
+        <div class="footer-gauche">
+        <h4>A propos</h4>
+        <ul>
+          <li>Fonctionnement du site</li>
+          <li>Conditions générales de vente</li>
+          <li>Données et confidentialité</li>
+        </ul>
+      </div>
+      <div class="footer-centre">
+        <h4>Nos hébergements</h4>
+        <ul>
+          <li>Charte de qualité</li>
+          <li>Soumettre votre hôtel</li>
+        </ul>
+      </div>
+      <div class="footer-droite">
+        <h4>Assistance</h4>
+        <ul>
+          <li>Centre d'aide</li>
+          <li>Nous contacter</li>
+        </ul>
+      </div>
+    </div>
+      </footer>
     </main>
   </body>
 </html>
