--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       crossorigin="anonymous"
     ></script>
     <link href="style.css" rel="stylesheet" />
+    <link rel="stylesheet" media="screen and (max-width: 1280px)" href="petite_resolution.css">
     <title>Reservia</title>
   </head>
 
