--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="initial-scale=1.0"/>
     <script
       src="https://kit.fontawesome.com/d3b251f4cc.js"
       crossorigin="anonymous"
     ></script>
     <link href="style.css" rel="stylesheet" />
-    <link rel="stylesheet" media="screen and (max-width: 1280px)" href="petite_resolution.css">
+    <link rel="stylesheet" media="screen and (max-width: 768px)" href="petite_resolution.css">
     <title>Reservia</title>
   </head>
 
@@ -17,21 +18,23 @@
       <header class="header">
         <div class="navbar">
           <!--logo-->
+          <div class="logo">
           <img src="img/Reservia.svg" alt="logo" id="logo" />
-
+        </div>
           <!--Ajout du menu-->
 
           <nav class="header-nav">
             <a href="#hebergements" title="Hebergement">Hébergement</a>
             <a href="#activites" title="Activités">Activités</a>
-            <a
-              href="#"
-              title="inscription"
-              class="disabled"
-              style="color: #0065fc"
-              >S'incrire</a
-            >
-          </nav>
+             </nav>
+             <div class="signin">
+              <a
+                href="#"
+                title="inscription"
+                class="disabled"
+                >S'incrire</a
+              >
+            </div>
         </div>
 
         <!--Ajout du sous-titre-->
@@ -49,7 +52,7 @@
             name="the_search"
             class="searchbar"
           />
-          <button class="button">Rechercher</button>
+          <button class="button">Rechercher</button><i class="fas fa-search"></i>
         </form>
 
         <!--Ajout des filtres-->
@@ -87,8 +90,8 @@
           <p>Plus de 500 logements sont disponibles dans cette ville</p>
         </div>
       </header>
-
-      <!--Ajout des catégories-->
+                        <!----------Fin HEADER---------->         
+      <!--Ajout des catégories hébergement et Populaires-->
       <section>
         <!--ajout d'hebergement-->
         <div class="hebergements">
@@ -302,7 +305,7 @@
             </div>
           </a>
           </div>  
-         
+         <!--Ajout les Calanques-->
         </div>
         <div class="grandformat">
           <a href="#">
@@ -312,6 +315,7 @@
           </div>
           </a>
         </div>
+        <!--ajout Notre-Dame et Parc longchamp-->
         <div class="container-activites">
         <div class="petitformat">
           <a href="#">
