suite media queries

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             name="the_search"
             class="searchbar"
           />
-          <button class="button">Rechercher</button><i class="fas fa-search"></i>
+          <button class="button">Rechercher</button><i class="fas fa-search button_icon"></i>
         </form>
 
         <!--Ajout des filtres-->
@@ -74,7 +74,7 @@
               <i class="fas fa-heart filtercategory"></i>Romantique
             </div>
           </div>
-          <div class="">
+          <div class="name">
               <div class="border-filter">
               <i class="fas fa-dog filtercategory"></i>Animaux autorisés
             </div>
