--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
       src="https://kit.fontawesome.com/d3b251f4cc.js"
       crossorigin="anonymous"
     ></script>
-    <link href="style.css" rel="stylesheet" />
-    <link rel="stylesheet" media="screen and (max-width: 768px)" href="petite_resolution.css">
+    <link href="CarolineDeque_2_04062021/style.css" rel="stylesheet" />
+    <link rel="stylesheet" media="screen and (min-width: 320px) and (max-width:600px)" href="petite_resolution.css">
     <title>Reservia</title>
   </head>
 
@@ -74,7 +74,7 @@
               <i class="fas fa-heart filtercategory"></i>Romantique
             </div>
           </div>
-          <div class="name">
+          <div class="">
               <div class="border-filter">
               <i class="fas fa-dog filtercategory"></i>Animaux autorisés
             </div>
