--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       src="https://kit.fontawesome.com/d3b251f4cc.js"
       crossorigin="anonymous"
     ></script>
-    <link href="CarolineDeque_2_04062021/style.css" rel="stylesheet" />
+    <link href="style.css" rel="stylesheet" />
     <link rel="stylesheet" media="screen and (min-width: 320px) and (max-width:600px)" href="petite_resolution.css">
     <title>Reservia</title>
   </head>
