--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             
             <article class="location">
               <a href="#">
-              <img src="img/Hébergements/photo1.jpg" alt="Auberge la Cannebière"/>
+              <img src="" alt="Auberge la Cannebière"/>
               <div class="text">
                 <h3>Auberge de la Cannebière</h3>
                 <p>Nuit à partir de <strong>25€</strong></p>
