--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
       src="https://kit.fontawesome.com/d3b251f4cc.js"
       crossorigin="anonymous"
     ></script>
-    <link href="style.css" rel="stylesheet" />
-    <link rel="stylesheet" media="screen and (min-width: 320px) and (max-width:600px)" href="petite_resolution.css">
+   <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" media="only screen and (min-width: 320px) and (max-width:600px)" href="petite_resolution.css">
     <title>Reservia</title>
   </head>
 
@@ -24,7 +24,7 @@
           <!--Ajout du menu-->
 
           <nav class="header-nav">
-            <a href="#hebergements" title="Hebergement">Hébergement</a>
+            <a href="#hebergements" title="Hebergements">Hébergement</a>
             <a href="#activites" title="Activités">Activités</a>
              </nav>
              <div class="signin">
@@ -336,32 +336,32 @@
       </div>
       </div>
       </section>
-      <footer>
-        <div class="footer">
-        <div class="footer-gauche">
-        <h4>A propos</h4>
-        <ul>
-          <li>Fonctionnement du site</li>
-          <li>Conditions générales de vente</li>
-          <li>Données et confidentialité</li>
-        </ul>
-      </div>
-      <div class="footer-centre">
-        <h4>Nos hébergements</h4>
-        <ul>
-          <li>Charte de qualité</li>
-          <li>Soumettre votre hôtel</li>
-        </ul>
-      </div>
-      <div class="footer-droite">
-        <h4>Assistance</h4>
-        <ul>
-          <li>Centre d'aide</li>
-          <li>Nous contacter</li>
-        </ul>
-      </div>
-    </div>
-      </footer>
     </main>
+    <footer>
+      <div class="footer">
+      <div class="footer-gauche">
+      <h4>A propos</h4>
+      <ul>
+        <li>Fonctionnement du site</li>
+        <li>Conditions générales de vente</li>
+        <li>Données et confidentialité</li>
+      </ul>
+    </div>
+    <div class="footer-centre">
+      <h4>Nos hébergements</h4>
+      <ul>
+        <li>Charte de qualité</li>
+        <li>Soumettre votre hôtel</li>
+      </ul>
+    </div>
+    <div class="footer-droite">
+      <h4>Assistance</h4>
+      <ul>
+        <li>Centre d'aide</li>
+        <li>Nous contacter</li>
+      </ul>
+    </div>
+  </div>
+    </footer>
   </body>
 </html>
