--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <!--Ajout du menu-->
 
           <nav class="header-nav">
-            <a href="#hebergements" title="Hebergements">Hébergement</a>
+            <a href="#hebergements" title="Hebergements">Hébergements</a>
             <a href="#activites" title="Activités">Activités</a>
              </nav>
              <div class="signin">
@@ -74,7 +74,7 @@
               <i class="fas fa-heart filtercategory"></i>Romantique
             </div>
           </div>
-          <div class="">
+          <div class="name">
               <div class="border-filter">
               <i class="fas fa-dog filtercategory"></i>Animaux autorisés
             </div>
@@ -90,7 +90,7 @@
           <p>Plus de 500 logements sont disponibles dans cette ville</p>
         </div>
       </header>
-                        <!----------Fin HEADER---------->         
+                             
       <!--Ajout des catégories hébergement et Populaires-->
       <section>
         <!--ajout d'hebergement-->
