--- a/index.html
+++ b/index.html
@@ -271,7 +271,8 @@
       </section>
       <!--ajout d'activités-->
       <!--Vieux Port-->
-      <section class="bloc-activites">
+      <section>
+        <div class="bloc-activites">
         <div class="titre-activites">
           <h2 id="activites">Activités à Marseille</h2>
         </div>
@@ -335,6 +336,7 @@
         </div>
       </div>
       </div>
+    </div>
       </section>
     </main>
     <footer>
