--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       crossorigin="anonymous"
     ></script>
    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" media="only screen and (min-width: 320px) and (max-width:600px)" href="petite_resolution.css">
+    <link rel="stylesheet" href="petite_resolution.css">
     <title>Reservia</title>
   </head>
 
