--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <!--Ajout du sous-titre-->
         <h1 class="title">
-          Trouvez votre hebergement pour des vacances de rêve
+          Trouvez votre hébergement pour des vacances de rêve
         </h1>
         <p class="subtitle">En plein centre ville ou en plein nature</p>
 
