--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
       src="https://kit.fontawesome.com/d3b251f4cc.js"
       crossorigin="anonymous"
     ></script>
+    <!--stylesheets-->
    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="petite_resolution.css">
+    <!--Google Fonts Raleway-->
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+    
     <title>Reservia</title>
   </head>
 
@@ -85,7 +91,7 @@
 
         <!--information-->
         <div class="info">
-          <i class="fas fa-info-circle"></i>
+          <i class="fas fa-info"></i>
 
           <p>Plus de 500 logements sont disponibles dans cette ville</p>
         </div>
@@ -339,6 +345,7 @@
       </div>
       </section>
     </main>
+    <!--ajout du Footer-->
     <footer>
       <div class="footer">
       <div class="footer-gauche">
