--- a/index.html
+++ b/index.html
@@ -66,22 +66,26 @@
           <div class="categories">
             <div class="name">
               <div class="border-filter">
-                <i class="fas fa-money-bill-wave filtercategory"></i>Economique
+                <i class="fas fa-money-bill-wave filtercategory"></i>
+                <p>Economique</p>
               </div>
             </div>
             <div class="name">
               <div class="border-filter">
-                <i class="fas fa-child filtercategory"></i>Familial
+                <i class="fas fa-child filtercategory"></i>
+                <p>Familial</p>
               </div>
             </div>
             <div class="name">
               <div class="border-filter">
-                <i class="fas fa-heart filtercategory"></i>Romantique
+                <i class="fas fa-heart filtercategory"></i>
+                <p>Romantique</p>
               </div>
             </div>
             <div class="name">
               <div class="border-filter">
-                <i class="fas fa-dog filtercategory"></i>Animaux autorisés
+                <i class="fas fa-dog filtercategory"></i>
+                <p>Animaux autorisés</p>
               </div>
             </div>
           </div>
@@ -105,7 +109,7 @@
             <article class="location">
               <a href="#">
                 <img
-                  src="images/Hébergements/photo1.jpg"
+                  src="images/Hebergements/photo1.jpg"
                   alt="Auberge la Cannebière"
                 />
                 <div class="text">
@@ -125,7 +129,7 @@
 
             <article class="location">
               <a href="#">
-                <img src="images/Hébergements/photo2.jpg" alt="Hôtel du port" />
+                <img src="images/Hebergements/photo2.jpg" alt="Hôtel du port" />
                 <div class="text">
                   <h3>Hôtel du port</h3>
                   <p>Nuit à partir de <strong>52€</strong></p>
@@ -143,7 +147,7 @@
             <article class="location">
               <a href="#">
                 <img
-                  src="images/Hébergements/photo3.jpg"
+                  src="images/Hebergements/photo3.jpg"
                   alt="Hôtel Les mouettes"
                 />
                 <div class="text">
@@ -163,7 +167,7 @@
             <article class="location">
               <a href="#">
                 <img
-                  src="images/Hébergements/photo4.jpg"
+                  src="images/Hebergements/photo4.jpg"
                   alt="Hôtel de la mer"
                 />
                 <div class="text">
@@ -183,7 +187,7 @@
             <article class="location">
               <a href="#">
                 <img
-                  src="images/Hébergements/photo5.jpg"
+                  src="images/Hebergements/photo5.jpg"
                   alt="Auberge Le Panier"
                 />
                 <div class="text">
@@ -203,7 +207,7 @@
             <article class="location">
               <a href="#">
                 <img
-                  src="images/Hébergements/photo6.jpg"
+                  src="images/Hebergements/photo6.jpg"
                   alt="Hôtel chez Amina"
                 />
                 <div class="text">
@@ -219,11 +223,10 @@
                 </div>
               </a>
             </article>
-
-            <!--afficher plus-->
-            <div class="plus">
-              <p class="plus">Afficher plus</p>
-            </div>
+          </div>
+           <!--afficher plus-->
+           <div >
+            <p class="plus">Afficher plus</p>
           </div>
         </div>
 
@@ -307,7 +310,7 @@
             <div class="grandformat">
               <a href="#">
                 <img
-                  src="images/Activités/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
+                  src="images/Activites/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
                   alt="Vieux Port"
                 />
                 <div class="titre-photo">
@@ -321,7 +324,7 @@
               <div class="petitformat">
                 <a href="#">
                   <img
-                    src="images/Activités/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
+                    src="images/Activites/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
                     alt="Fort de Pomègues"
                   />
                   <div class="titre-photo">
@@ -332,7 +335,7 @@
               <div class="petitformat">
                 <a href="#">
                   <img
-                    src="images/Activités/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
+                    src="images/Activites/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
                     alt="Iles du Frioul"
                   />
                   <div class="titre-photo">
@@ -345,7 +348,7 @@
             <div class="grandformat">
               <a href="#">
                 <img
-                  src="images/Activités/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
+                  src="images/Activites/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
                   alt="Parc National des Calanques"
                 />
                 <div class="titre-photo">
@@ -358,7 +361,7 @@
               <div class="petitformat">
                 <a href="#">
                   <img
-                    src="images/Activités/florian-wehde-xW9e8gdotxI-unsplash.jpg"
+                    src="images/Activites/florian-wehde-xW9e8gdotxI-unsplash.jpg"
                     alt="Notre-Dame-de-la-Garde"
                   />
                   <div class="titre-photo">
@@ -369,7 +372,7 @@
               <div class="petitformat">
                 <a href="#">
                   <img
-                    src="images/Activités/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
+                    src="images/Activites/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
                     alt="Parc Longchamp"
                   />
                   <div class="titre-photo">
