--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <title>Reservia</title>
   </head>
 
+  <div class="container-width">
   <body>
     <main>
       <!--HEADER-->
@@ -413,4 +414,5 @@
       </div>
     </footer>
   </body>
+</div>
 </html>
